; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-ixp23xx/extr_pci.c_ixp23xx_pci_setup.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-ixp23xx/extr_pci.c_ixp23xx_pci_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_sys_data = type { i32** }

@ixp23xx_pci_io_space = common dso_local global i32 0, align 4
@ixp23xx_pci_mem_space = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ixp23xx_pci_setup(i32 %0, %struct.pci_sys_data* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.pci_sys_data*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.pci_sys_data* %1, %struct.pci_sys_data** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp sge i32 %6, 1
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %22

9:                                                ; preds = %2
  %10 = load %struct.pci_sys_data*, %struct.pci_sys_data** %5, align 8
  %11 = getelementptr inbounds %struct.pci_sys_data, %struct.pci_sys_data* %10, i32 0, i32 0
  %12 = load i32**, i32*** %11, align 8
  %13 = getelementptr inbounds i32*, i32** %12, i64 0
  store i32* @ixp23xx_pci_io_space, i32** %13, align 8
  %14 = load %struct.pci_sys_data*, %struct.pci_sys_data** %5, align 8
  %15 = getelementptr inbounds %struct.pci_sys_data, %struct.pci_sys_data* %14, i32 0, i32 0
  %16 = load i32**, i32*** %15, align 8
  %17 = getelementptr inbounds i32*, i32** %16, i64 1
  store i32* @ixp23xx_pci_mem_space, i32** %17, align 8
  %18 = load %struct.pci_sys_data*, %struct.pci_sys_data** %5, align 8
  %19 = getelementptr inbounds %struct.pci_sys_data, %struct.pci_sys_data* %18, i32 0, i32 0
  %20 = load i32**, i32*** %19, align 8
  %21 = getelementptr inbounds i32*, i32** %20, i64 2
  store i32* null, i32** %21, align 8
  store i32 1, i32* %3, align 4
  br label %22

22:                                               ; preds = %9, %8
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
